# rust_slvs

./: .gitmodules  Cargo.toml  README.md  bindings.rs  build.rs  build.rs_foo
examples/: 2d.rs  3d.rs  triangle.rs
src/: bindings.rs  constraint.rs  element.rs  entity.rs  group.rs  lib.rs  main.rs  param.rs  parameter.rs  slvs.rs  solver.rs  system.rs  target.rs  utils.rs
src/constraint/: angle.rs  arc_arc_difference.rs  arc_arc_len_ratio.rs  arc_line_difference.rs  arc_line_len_ratio.rs  arc_line_tangent.rs  at_midpoint.rs  cubic_line_tangent.rs  curve_curve_tangent.rs  diameter.rs  eq_len_pt_line_d.rs  eq_pt_ln_distances.rs  equal_angle.rs  equal_length_lines.rs  equal_line_arc_len.rs  equal_radius.rs  horizontal.rs  length_difference.rs  length_ratio.rs  parallel.rs  perpendicular.rs  points_coincident.rs  proj_pt_distance.rs  pt_face_distance.rs  pt_in_plane.rs  pt_line_distance.rs  pt_on_circle.rs  pt_on_face.rs  pt_on_line.rs  pt_plane_distance.rs  pt_pt_distance.rs  same_orientation.rs  symmetric.rs  symmetric_horiz.rs  symmetric_line.rs  symmetric_vert.rs  vertical.rs  where_dragged.rs
src/element/: constraint.rs  entity.rs  group.rs  param.rs
src/entity/: arc_of_circle.rs  circle.rs  cubic.rs  distance.rs  line_segment.rs  normal.rs  normal_in_2d.rs  normal_in_3d.rs  point.rs  point_in_2d.rs  point_in_3d.rs  workplane.rs
src/slvs/: constraint.rs  parameter.rs
tests/: demo.rs  doc.rs  entities.rs  solver.rs
