[package]
name = "slvs"
version = "0.5.0"
edition = "2021"
description = "Rust wrapper for the SolveSpace constraint solver library."
license  = "GPL-3.0"
repository = "https://github.com/thekakkun/rust_slvs"
exclude = [
    "solvespace/**"
]
include = [
    "solvespace/extlib/eigen/Eigen/**",
    "solvespace/extlib/mimalloc/include/**",
    "solvespace/extlib/mimalloc/src/**",
    "solvespace/include/**",
    "solvespace/src/**",
    ".gitignore",
    ".gitmodules",
    "README.md",
    "build.rs",
    "src/**",
    "src/entity.rs",
    "src/lib.rs",
    "src/main.rs",
    "src/parameter.rs",
]

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
dunce = "1.0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }